--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
   </dependencies>
   <profiles>
   <profile>
-  <id> </id>
+  <id>smoke</id>
   <build>
   <pluginManagement>
   <plugins>
@@ -64,7 +64,7 @@
         <version>3.1.2</version>
         <configuration>
           <suiteXmlFiles>
-            <suiteXmlFile>testng.xml</suiteXmlFile>
+            <suiteXmlFile>testngjen.xml</suiteXmlFile>
           </suiteXmlFiles>
         </configuration>
       </plugin>
